--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -9,7 +9,7 @@
     <div style="width: 100%; border-top: 2px solid"></div>
     <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
         <nav class="uk-navbar-container" uk-navbar
-            style="background: rgba(255, 255, 255, 0.7); border-bottom-left-radius: 15px; border-bottom-right-radius: 15px">
+            style="background: rgba(255, 255, 255, 0.7); border-bottom-left-radius: 10px; border-bottom-right-radius: 10px">
             <div class="uk-navbar-left">
                 <ul class="uk-navbar-nav">
                     <li class="uk-active"><a href="#main-menu" class="" uk-toggle
@@ -46,13 +46,13 @@
                             <ul class="uk-nav uk-nav-default">
                                 <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
                                         uk-icon="icon: reply"></a></li>
-                                <li class="uk-active"><a href="#">esigner1</a></li>
-                                <li class="uk-active"><a href="#">esigner2</a></li>
-                                <li class="uk-active"><a href="#">esigner3</a></li>
-                                <li class="uk-active"><a href="#">esigner4</a></li>
-                                <li class="uk-active"><a href="#">esigner5</a></li>
-                                <li class="uk-active"><a href="#">esigner6</a></li>
-                                <li class="uk-active"><a href="#">esigner7</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner1</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner2</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner3</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner4</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner5</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner6</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner7</a></li>
                             </ul>
                         </div>
                     </div>
@@ -64,13 +64,13 @@
                             <ul class="uk-nav uk-nav-default">
                                 <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
                                         uk-icon="icon: reply"></a></li>
-                                <li class="uk-active"><a href="#">esigner1</a></li>
-                                <li class="uk-active"><a href="#">esigner2</a></li>
-                                <li class="uk-active"><a href="#">esigner3</a></li>
-                                <li class="uk-active"><a href="#">esigner4</a></li>
-                                <li class="uk-active"><a href="#">esigner5</a></li>
-                                <li class="uk-active"><a href="#">esigner6</a></li>
-                                <li class="uk-active"><a href="#">esigner7</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner1</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner2</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner3</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner4</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner5</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner6</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">esigner7</a></li>
                             </ul>
                         </div>
                     </div>
@@ -82,13 +82,13 @@
                             <ul class="uk-nav uk-nav-default">
                                 <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
                                         uk-icon="icon: reply"></a></li>
-                                <li class="uk-active"><a href="#">bags1</a></li>
-                                <li class="uk-active"><a href="#">bags2</a></li>
-                                <li class="uk-active"><a href="#">bags3</a></li>
-                                <li class="uk-active"><a href="#">bags4</a></li>
-                                <li class="uk-active"><a href="#">bags5</a></li>
-                                <li class="uk-active"><a href="#">bags6</a></li>
-                                <li class="uk-active"><a href="#">bags7</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">bags1</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">bags2</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">bags3</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">bags4</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">bags5</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">bags6</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">bags7</a></li>
                             </ul>
                         </div>
                     </div>
@@ -100,13 +100,13 @@
                             <ul class="uk-nav uk-nav-default">
                                 <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
                                         uk-icon="icon: reply"></a></li>
-                                <li class="uk-active"><a href="#">interior1</a></li>
-                                <li class="uk-active"><a href="#">interior2</a></li>
-                                <li class="uk-active"><a href="#">interior3</a></li>
-                                <li class="uk-active"><a href="#">interior4</a></li>
-                                <li class="uk-active"><a href="#">interior5</a></li>
-                                <li class="uk-active"><a href="#">interior6</a></li>
-                                <li class="uk-active"><a href="#">interior7</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">interior1</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">interior2</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">interior3</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">interior4</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">interior5</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">interior6</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">interior7</a></li>
                             </ul>
                         </div>
                     </div>
@@ -118,13 +118,13 @@
                             <ul class="uk-nav uk-nav-default">
                                 <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
                                         uk-icon="icon: reply"></a></li>
-                                <li class="uk-active"><a href="#">decorations1</a></li>
-                                <li class="uk-active"><a href="#">decorations2</a></li>
-                                <li class="uk-active"><a href="#">decorations3</a></li>
-                                <li class="uk-active"><a href="#">decorations4</a></li>
-                                <li class="uk-active"><a href="#">decorations5</a></li>
-                                <li class="uk-active"><a href="#">decorations6</a></li>
-                                <li class="uk-active"><a href="#">decorations7</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">decorations1</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">decorations2</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">decorations3</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">decorations4</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">decorations5</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">decorations6</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">decorations7</a></li>
                             </ul>
                         </div>
                     </div>
@@ -136,13 +136,13 @@
                             <ul class="uk-nav uk-nav-default">
                                 <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
                                         uk-icon="icon: reply"></a></li>
-                                <li class="uk-active"><a href="#">sculptures1</a></li>
-                                <li class="uk-active"><a href="#">sculptures2</a></li>
-                                <li class="uk-active"><a href="#">sculptures3</a></li>
-                                <li class="uk-active"><a href="#">sculptures4</a></li>
-                                <li class="uk-active"><a href="#">sculptures5</a></li>
-                                <li class="uk-active"><a href="#">sculptures6</a></li>
-                                <li class="uk-active"><a href="#">sculptures7</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">sculptures1</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">sculptures2</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">sculptures3</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">sculptures4</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">sculptures5</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">sculptures6</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">sculptures7</a></li>
                             </ul>
                         </div>
                     </div>
@@ -154,13 +154,13 @@
                             <ul class="uk-nav uk-nav-default">
                                 <li class="uk-active" style="padding-left: 90%;"><a href="#main-menu" class="uk-button uk-button-link" uk-toggle
                                         uk-icon="icon: reply"></a></li>
-                                <li class="uk-active"><a href="#">pillows1</a></li>
-                                <li class="uk-active"><a href="#">pillows2</a></li>
-                                <li class="uk-active"><a href="#">pillows3</a></li>
-                                <li class="uk-active"><a href="#">pillows4</a></li>
-                                <li class="uk-active"><a href="#">pillows5</a></li>
-                                <li class="uk-active"><a href="#">pillows6</a></li>
-                                <li class="uk-active"><a href="#">pillows7</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">pillows1</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">pillows2</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">pillows3</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">pillows4</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">pillows5</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">pillows6</a></li>
+                                <li class="uk-active"><a href="#"  class="uk-button uk-button-text">pillows7</a></li>
                             </ul>
                         </div>
                     </div>
@@ -168,7 +168,7 @@
 
 
                     <li class="uk-active">
-                        <a>
+                        <a href="/">
                             <h1 class="uk-margin-remove">BeFreela</h1>
                         </a>
                     </li>
@@ -181,12 +181,15 @@
                 </ul>
             </div>
             <div class="uk-navbar-right">
-                <div class="uk-search uk-search-default">
+                <div class="uk-search uk-search-default uk-margin-small-right">
                     <a type="submit" href="" id="searchBtn" uk-search-icon></a>
                     <input class="uk-search-input uk-border-rounded" type="search" placeholder="Search"
                         id="search_pole">
                 </div>
                 <ul class="uk-navbar-nav">
+                    <li class="uk-active">
+                        <a href="/seller.befreela/" uk-icon="icon: cart"></a>
+                    </li>
                     <li class="uk-active">
                         <a href="/orders/" uk-icon="icon: bag"></a>
                     </li>
