--- a/bizopt/BO/templates/showPartner.html
+++ b/bizopt/BO/templates/showPartner.html
@@ -76,36 +76,37 @@
                             </div>
                         </div>
                     </div>
-                    <div class="uk-card-body" style="padding-bottom: 0px; padding-top: 2%;">
-                            <label for="phonenumber" class="uk-text-muted">Контактный телефон</label>
-                            <div class="uk-inline">
-                                <select class="uk-select uk-width-1-5" id="phoneCode"
-                                    style="padding: 0 0 0 4%; background-image: none;" onchange="validateCountry(this)">
-                                    <option value="+7">+7</option>
-                                    <option value="+375">+375</option>
-                                    <option value="+996">+996</option>
-                                    <option value="+374">+374</option>
-                                </select>
+                    <div class="uk-card-body" style="padding-bottom: 0px; padding-top: 2%; text-align: center">
+                        <label for="phonenumber" class="uk-text-muted">Контактный телефон</label>
+                        <div class="uk-inline uk-width-1">
+                            <select class="uk-select uk-width-1-5" id="phoneCode"
+                                style="padding: 0 0 0 4%; background-image: none;" onchange="validateCountry(this)">
+                                <option value="+7">+7</option>
+                                <option value="+375">+375</option>
+                                <option value="+996">+996</option>
+                                <option value="+374">+374</option>
+                            </select>
 
-                                <input class="uk-input uk-border-rounded" id="phoneNumber" style="width: 50%;"
-                                    name="phonenumber" type="text" placeholder="(000) 000 00 00">
+                            <input class="uk-input uk-border-rounded" id="phoneNumber" style="width: 50%;"
+                                name="phonenumber" type="text" placeholder="(000) 000 00 00">
 
-                                <select class="uk-select uk-width-1-5" id="Country"
-                                    style="padding: 0 0 0 5%; background-image: none;" onchange="validatePhoneCode(this)">
-                                    <option value="Россия" default>🇷🇺</option>
-                                    <option value="Казахстан">🇰🇿</option>
-                                    <option value="Беларусь">🇧🇾</option>
-                                    <option value="Киргизия">🇰🇬</option>
-                                    <option value="Армения">🇦🇲</option>
-                                </select>
-                            </div>
-                            <div class="uk-flex uk-flex-center uk-align-center" style="margin-top: 20px">
-                                <button class="uk-button uk-button-primary uk-width-1-1 uk-border-rounded" id="registerBtn" disabled>Получить
-                                    код</button>
+                            <select class="uk-select uk-width-1-5" id="Country"
+                                style="padding: 0 0 0 5%; background-image: none;" onchange="validatePhoneCode(this)">
+                                <option value="Россия" default>🇷🇺</option>
+                                <option value="Казахстан">🇰🇿</option>
+                                <option value="Беларусь">🇧🇾</option>
+                                <option value="Киргизия">🇰🇬</option>
+                                <option value="Армения">🇦🇲</option>
+                            </select>
+                        </div>
+                        <div class="uk-flex uk-flex-center uk-align-center" style="margin-top: 20px">
+                            <button class="uk-button uk-button-primary uk-width-1-1 uk-border-rounded" id="registerBtn"
+                                disabled>Получить
+                                код</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <section id="main">
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-3@s uk-margin"
@@ -379,7 +380,7 @@
 
     const isModifierKey = (event) => {
         const key = event.keyCode;
-        document.getElementById('registerBtn').disabled=true;
+        document.getElementById('registerBtn').disabled = true;
         return (event.shiftKey === true || key === 35 || key === 36) || // Allow Shift, Home, End
             (key === 8 || key === 9 || key === 13 || key === 46) || // Allow Backspace, Tab, Enter, Delete
             (key > 36 && key < 41) || // Allow left, up, right, down
@@ -392,14 +393,14 @@
 
     const enforceFormat = (event) => {
         // Input must be of a valid number format or a modifier key, and not longer than ten digits
-        document.getElementById('registerBtn').disabled=true;
+        document.getElementById('registerBtn').disabled = true;
         if (!isNumericInput(event) && !isModifierKey(event)) {
             event.preventDefault();
         }
     };
 
     const formatToPhone = (event) => {
-        document.getElementById('registerBtn').disabled=true;
+        document.getElementById('registerBtn').disabled = true;
         if (isModifierKey(event)) {
             return;
         }
@@ -410,17 +411,17 @@
         const last1 = input.substring(6, 8);
         const last2 = input.substring(8, 10);
 
-        if (input.length > 9){
-            document.getElementById('registerBtn').disabled=false;
+        if (input.length > 9) {
+            document.getElementById('registerBtn').disabled = false;
             event.target.value = `(${areaCode}) ${middle} ${last1} ${last2}`;
         } else if (input.length > 6) {
             event.target.value = `(${areaCode}) ${middle} ${last1} ${last2}`;
-            document.getElementById('registerBtn').disabled=true;
+            document.getElementById('registerBtn').disabled = true;
         } else if (input.length > 3) {
-            document.getElementById('registerBtn').disabled=true;
+            document.getElementById('registerBtn').disabled = true;
             event.target.value = `(${areaCode}) ${middle}`;
         } else if (input.length > 0) {
-            document.getElementById('registerBtn').disabled=true;
+            document.getElementById('registerBtn').disabled = true;
             event.target.value = `(${areaCode}`;
         }
     };
