--- a/partner/Part/templates/partnerTemplates/template4.html
+++ b/partner/Part/templates/partnerTemplates/template4.html
@@ -87,11 +87,11 @@
 
                 <br>
 
-                <div class="row mt-3 mb-3">
+                <div class="row mt-3 mb-3" style="display: none">
                     <div class="col-md-12">
                         <div class="form-check form-switch">
                             <input class="form-check-input" type="checkbox" name="published" placeholder="{{ creator.published }}"
-                                value="{{ creator.published }}">
+                                value="{{ creator.published }}" checked>
                             <label class="form-check-label">Хотите опубликовать резюме?</label>
                         </div>
                     </div>
