--- a/partner/Part/templates/index.html
+++ b/partner/Part/templates/index.html
@@ -199,7 +199,7 @@
         <ul class="list-unstyled CTAs">
 
             <li>
-                <a href="/" class="article">Выйти</a>
+                <a href="logout/" class="article">Выйти</a>
             </li>
         </ul>
     </nav>
