bizopt reg and log

--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -243,7 +243,7 @@
                     <a href="/accounts/login/" uk-icon="icon: bag"></a>
                 </li>
                 <li class="uk-active">
-                    <a href="/accounts/login/" uk-icon="icon: user"></a>
+                    <a href="/login/" uk-icon="icon: user"></a>
 
                 </li>
             </ul>
