--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -2,244 +2,165 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>BizOpt</title>
-    <link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
-    <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <style>
-        body {
-            background: #eee
-        }
-
-        #regForm {
-            background-color: #ffffff;
-            margin: 0px auto;
-            font-family: Raleway;
-            padding: 40px;
-            border-radius: 10px
-        }
-
-        #register {
-            color: #6A1B9A
-        }
-
-        h1 {
-            text-align: center
-        }
-
-        input {
-            padding: 10px;
-            width: 100%;
-            font-size: 17px;
-            font-family: Raleway;
-            border: 1px solid #aaaaaa;
-            border-radius: 10px;
-            -webkit-appearance: none
-        }
-
-        .tab input:focus {
-            border: 1px solid #6a1b9a !important;
-            outline: none
-        }
-
-        input.invalid {
-            border: 1px solid #e03a0666;
-        }
-
-        .tab {
-            display: none
-        }
-
-        button {
-            background-color: #6A1B9A;
-            color: #ffffff;
-            border: none;
-            border-radius: 50%;
-            padding: 10px 20px;
-            font-size: 17px;
-            font-family: Raleway;
-            cursor: pointer
-        }
-
-        button:hover {
-            opacity: 0.8
-        }
-
-        button:focus {
-            outline: none !important
-        }
-
-        #prevBtn {
-            background-color: #bbbbbb
-        }
-
-        .all-steps {
-            text-align: center;
-            margin-top: 30px;
-            margin-bottom: 30px;
-            width: 100%;
-            display: inline-flex;
-            justify-content: center
-        }
-
-        .step {
-            height: 40px;
-            width: 40px;
-            margin: 0 2px;
-            background-color: #bbbbbb;
-            border: none;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 15px;
-            color: #6a1b9a;
-            opacity: 0.5
-        }
-
-        .step.active {
-            opacity: 1
-        }
-
-        .step.finish {
-            color: #fff;
-            background: #6a1b9a;
-            opacity: 1
-        }
-
-        .all-steps {
-            text-align: center;
-            margin-top: 30px;
-            margin-bottom: 30px
-        }
-    </style>
+	<meta charset='utf-8'>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<title>BizOpt</title>
+	<link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css' rel='stylesheet'>
+	<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/css/uikit.min.css" />
+	<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 </head>
 
 <body oncontextmenu='return false' class='snippet-body'>
-    <div class="container mt-5">
-        <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-md-8">
-                <form id="regForm" method="POST">
-                    <h1 id="register">Регистрация</h1>
-                    <div class="all-steps" id="all-steps">
-                        <a onclick="surTab(0)">
-                            <span class="step">
-                                <i class="fa fa-user"></i>
-                            </span>
-                        </a>
-                        <a onclick="surTab(1)">
-                            <span class="step">
-                                <i class="fa fa-unlock-alt"></i>
-                            </span>
-                        </a>
-                        <a onclick="surTab(2)">
-                            <span class="step">
-                                <i class="fa fa-unlock-alt"></i>
-                            </span>
-                        </a>
-                    </div>
-                    <div class="tab">
-                        {{ form.first_name.label }}: {{ form.first_name }}
+<div class="container" style="margin-top: 5%">
+	<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
+	<h1 style="text-align: center; margin-top: 2%">BeFreela</h1>
+	<div style="width: 30%; margin:auto; border: solid black 4px; border-radius: 1em">
+		<div class="uk-flex" style="width: 100%">
+				<button id="signin" style="width: 50%; border-top: 0; border-left: 0; border-bottom: solid black 4px; border-right: solid black 2px" class="uk-button uk-button-default"  type="submit">Вход</button>
+				<button id="signup" style="width: 50%; border-top: 0; border-right: 0; border-bottom: solid black 4px; border-left: solid black 2px" class="uk-button uk-button-default" type="submit">Регистрация</button>
+		</div>
+			<div id="signup-tab" style="display:none; width: 80%; margin: auto">
+				<form method="POST" action="." id="signup-form">
+            {% csrf_token %}
+				<h3 style="text-align: center; margin-top: 5%">Регистрация</h3>
+				<div class="inputs" style="width: 80%; margin:auto">
+					<div class="uk-flex-column">
+						<h5>Почта</h5>
+						{{form.email}}
+					</div>
+					<div class="uk-flex-column">
+						<h5>Имя</h5>
+						{{form.first_name}}
+					</div>
+					<div class="uk-flex-column">
+						<h5>Пароль</h5>
+						{{form.password1}}
+					</div>
+					<div class="uk-flex-column">
+						<h5>Повторите пароль</h5>
+						{{form.password2}}
+					</div>
+				</div>
+<!--				<div>-->
+<!--					<input type="checkbox">-->
+<!--					<label>Я согласен с <span style="border-bottom: 1px solid">...........</span></label>-->
+<!--				</div>-->
+				<button style=" margin-left: 10%; margin-bottom: 10%; margin-top: 5%; text-align: center" class="uk-button uk-button-secondary" type="submit" name="btnform1" >Зарегестрироваться</button>
+					{% csrf_token %}
+		</form>
+			</div>
+		<form method="POST" action="." id="signin-form">
+			{% csrf_token %}
+		<div id="signin-tab" style="width: 80%; margin: auto">
+			<h3 style="text-align: center; margin-top: 5%">Войти</h3>
+			<div style="width: 80%; margin:auto">
+				<div class="uk-flex-column inputs">
+					<h5>Почта</h5>
+					<input type="text" name="email" class="uk-input"  placeholder="email@mail.com">
+				</div>
+				<div class="uk-flex-column inputs">
+					<h5>Пароль</h5>
+<input type="password" name="password" placeholder="Password..." class="uk-input" >
+				</div>
+			</div>
+			<button style="width: 60%; margin-left: 20%; margin-bottom: 20%; margin-top: 5%" class="uk-button uk-button-secondary" type="submit" name="btnform2" >Войти</button>
+		</div>
 
-                        <br>
-                        <br> {{ form.last_name.label }}: {{ form.last_name }}
-                        <br>
-                        <br>
-                    </div>
+		</form>
 
-                    <div class="tab">
-                         {{ form.username.label }}: {{ form.username }}
-                        <br>
-                        <br> {{ form.password1.label }}: {{ form.password1 }}
-                        <br>
-                        <br> {{ form.password2.label}}: {{ form.password2}}
-                        <br>
-                        <br>
+</div>
+	</div>
+</div>
+<!--</div> &lt;!&ndash; /form &ndash;&gt;-->
 
-                    </div>
+<!--	<div class="container mt-5">-->
+<!--		<div class="row d-flex justify-content-center align-items-center">-->
+<!--			<div class="col-md-8">-->
+<!--				<form method="post" id="regForm" action="{% url 'login' %}">-->
+<!--					<h1 style="font-size:30px" id="redistration">Добро пожаловть в</h1>-->
+<!--					<h1>BeFreela</h1>-->
+<!--					<div class="all-steps" id="all-steps">-->
+<!--						<a href="">-->
+<!--							<span class="step">-->
+<!--								<i class="fa fa-user"></i>-->
+<!--							</span>-->
+<!--						</a>-->
+<!--					</div>-->
 
-                    <div class="tab">
-                        {{form.phone.label}} {{form.phone}}
-                        <br>
-                        <br> {{ form.email.label}} {{ form.email}}
-                        <br>
-                        <br> {{ form.city.label}} {{ form.city}}
-                        <br>
-                        <br>
-                    </div>
+<!--					<div class="tab">-->
+<!--						<p>-->
+<!--							<br>-->
+<!--							{{ form.username.label_tag }}-->
+<!--							{{ form.username }}-->
+<!--							<br>-->
+<!--							<br>-->
+<!--							{{ form.password.label_tag }}-->
+<!--							{{ form.password }}-->
+<!--						</p>-->
+<!--						{% if form.errors %}-->
+<!--						<div class="alert alert-danger" id="loginError" role="alert">-->
+<!--							Ошибка в пароле или логин. Поробуйте еще раз.  -->
+<!--						</div>					-->
+<!--						{% endif %}-->
+<!--					-->
+<!--						{% if next %}-->
+<!--						{% if user.is_authenticated %}-->
+<!--						<div class="alert alert-warning" id="loginError" role="alert">-->
+<!--							У вашего аккаунта недостаточно прав. Что бы продолжыить, пожалуйста, войдите в акаунт с нужными правами.	  -->
+<!--						</div>-->
+<!--						{% else %}-->
+<!--						<div class="alert alert-warning" id="loginError" role="alert">-->
+<!--							Пожалуйста войдите, что бы увидеть данную страниццу  -->
+<!--						</div>-->
+<!--						{% endif %}-->
+<!--						{% endif %}-->
+<!--						<p style="font-size: small;">Забыли пароль? <a href="/restorePassword">востановите-->
+<!--								его</a></p>-->
+<!--						<h7>Еще нет аккаунта? <a href="/signin">создай его</a></h7>-->
+<!--					</div>-->
+<!--					-->
+<!--					<div style="overflow: auto;" id="nextprevious">-->
+<!--						<div style="float: right;">-->
+<!--							{% csrf_token %}-->
+<!--							<button type="submit" id="nextBtn" value="login">-->
+<!--								<i class="fa fa-angle-double-right"></i>-->
+<!--							</button>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</form>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</div>-->
 
-                    {% csrf_token %} {% if form.errors %} {% for field in form %} {% for error in field.errors %}
-                    <div class="alert alert-danger">
-                        <strong>{{ error|escape }}</strong>
-                    </div>
-                    {% endfor %} {% endfor %} {% endif %}
-                    <h7>Уже аккаунта? <a href="/accounts/login/">создай его</a></h7>
-                    <div style="overflow:auto;" id="next-previous">
-                        <div style="float:right;">
-                            <button type="button" id="prevBtn" onclick="nextPrev(-1)">
-                                <i class="fa fa-angle-double-left"></i>
-                            </button>
-                            <button type="button" id="nextBtn" onclick="nextPrev(1)">
-                                <i class="fa fa-angle-double-right"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
+
 </body>
+<style>
+	.inputs input {
+		width: 100%;
+		border-radius: 1em;
+		margin-bottom: 10px
+
+	}
+	.inputs h5{
+		margin-bottom: 5px;
+		margin-top: 10px;
+	}
+</style>
 <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
 </script>
-<script type='text/Javascript'>
-    let currentTab = 0;
-document.addEventListener("DOMContentLoaded", function(event) {
-    showTab(currentTab);
-});
+<script>
+	$(document).ready(function() {
+		$("#signup").click(function(){
+			$("#signin-tab").css("display", "none");
+			$("#signup-tab").css("display", "");
+		});
 
-function showTab(n) {
-    let x = document.getElementsByClassName("tab");
-    x[n].style.display = "block";
-    if (n === 0) {
-        document.getElementById("prevBtn").style.display = "none";
-    } else {
-        document.getElementById("prevBtn").style.display = "inline";
-    }
-    if (n === (x.length - 1)) {
-        document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
-    } else {
-        document.getElementById("nextBtn").innerHTML = '<i class="fa fa-angle-double-right"></i>';
-    }
-    fixStepIndicator(n)
-}
-
-function nextPrev(n) {
-    let x = document.getElementsByClassName("tab");
-    x[currentTab].style.display = "none";
-    currentTab = currentTab + n;
-    if (currentTab === x.length) {
-        document.getElementById('nextBtn').type = "submit"
-    }
-    showTab(currentTab);
-}
-
-function surTab(n) {
-    let x = document.getElementsByClassName("tab");
-    x[currentTab].style.display = "none";
-    currentTab = n;
-    showTab(currentTab);
-}
-
-function fixStepIndicator(n) {
-    let i, x = document.getElementsByClassName("step");
-    for (i = 0; i <
-        x.length; i++) {
-        x[i].className = x[i].className.replace(" active", "");
-    }
-    x[n].className += " active";
-}
+		$("#signin").click(function() {
+			$("#signup-tab").css("display", "none");
+			$("#signin-tab").css("display", "");
+		});
+	});
 </script>
 
 </html>
