fixed minor bugs

--- a/bizopt/BO/templates/menu.html
+++ b/bizopt/BO/templates/menu.html
@@ -215,7 +215,7 @@
     <form class="uk-flex uk-flex-between" style="padding: 15px 10% 5px 10%">
         <p style="margin: 0px"> Регион <b>Москва</b></p>
         <a class="uk-button uk-button-text" style="text-transform: none; font-size: medium;"
-            href="/accounts/login/">Стать
+            href="/login/">Стать
             партнером</a>
     </form>
     <div style="width: 100%; border-top: 2px solid"></div>
@@ -229,7 +229,7 @@
                 </li>
                 <li class="uk-active"><a href="/creators/resumes/"
                         style="font-size: 20px; text-transform: none;">Бренды</a></li>
-                <li class="uk-active"><a href="/accounts/login/"
+                <li class="uk-active"><a href="/login/"
                         style="font-size: 20px; text-transform: none;">Мастрерская</a></li>
             </ul>
         </div>
@@ -240,7 +240,7 @@
             </div>
             <ul class="uk-navbar-nav">
                 <li class="uk-active">
-                    <a href="/accounts/login/" uk-icon="icon: bag"></a>
+                    <a href="/login/" uk-icon="icon: bag"></a>
                 </li>
                 <li class="uk-active">
                     <a href="/login/" uk-icon="icon: user"></a>
