--- a/bizopt/BO/templates/signin.html
+++ b/bizopt/BO/templates/signin.html
@@ -12,153 +12,85 @@
 </head>
 
 <body oncontextmenu='return false' class='snippet-body'>
-<div class="container" style="margin-top: 5%">
-	<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
-	<h1 style="text-align: center; margin-top: 2%">BeFreela</h1>
-	<div style="width: 30%; margin:auto; border: solid black 4px; border-radius: 1em">
-		<div class="uk-flex" style="width: 100%">
-				<button id="signin" style="width: 50%; border-top: 0; border-left: 0; border-bottom: solid black 4px; border-right: solid black 2px" class="uk-button uk-button-default"  type="submit">Вход</button>
-				<button id="signup" style="width: 50%; border-top: 0; border-right: 0; border-bottom: solid black 4px; border-left: solid black 2px" class="uk-button uk-button-default" type="submit">Регистрация</button>
-		</div>
-			<div id="signup-tab" style="display:none; width: 80%; margin: auto">
-				<form method="POST" action="." id="signup-form">
-            {% csrf_token %}
-				<h3 style="text-align: center; margin-top: 5%">Регистрация</h3>
-				<div class="inputs" style="width: 80%; margin:auto">
-					<div class="uk-flex-column">
-						<h5>Почта</h5>
-						{{form.email}}
-					</div>
-					<div class="uk-flex-column">
-						<h5>Имя</h5>
-						{{form.first_name}}
-					</div>
-					<div class="uk-flex-column">
-						<h5>Пароль</h5>
-						{{form.password1}}
-					</div>
-					<div class="uk-flex-column">
-						<h5>Повторите пароль</h5>
-						{{form.password2}}
-					</div>
-				</div>
-<!--				<div>-->
-<!--					<input type="checkbox">-->
-<!--					<label>Я согласен с <span style="border-bottom: 1px solid">...........</span></label>-->
-<!--				</div>-->
-				<button style=" margin-left: 10%; margin-bottom: 10%; margin-top: 5%; text-align: center" class="uk-button uk-button-secondary" type="submit" name="btnform1" >Зарегестрироваться</button>
+	<div class="container" style="margin-top: 5%">
+		<h1 style="font-size:30px; text-align: center; ">Добро пожаловать в</h1>
+		<h1 style="text-align: center; margin-top: 2%">BeFreela</h1>
+		<div style="width: 50%; margin:auto; border: solid black 2px; border-radius: 10px">
+			<div class="uk-flex" style="width: 100%">
+				<button id="signin"
+					style="width: 50%; border-top: 0; border-left: 0; border-bottom: solid black 2px; border-right: solid black 1px; outline: none;"
+					class="uk-button uk-button-default" type="button">Вход</button>
+				<button id="signup"
+					style="width: 50%; border-top: 0; border-right: 0; border-bottom: solid black 2px; border-left: solid black 1px; outline: none;"
+					class="uk-button uk-button-default" type="button">Регистрация</button>
+			</div>
+				<form method="POST" action="." id="signup-form" style="display: none; text-align: center;">
 					{% csrf_token %}
-		</form>
-			</div>
-		<form method="POST" action="." id="signin-form">
-			{% csrf_token %}
-		<div id="signin-tab" style="width: 80%; margin: auto">
-			<h3 style="text-align: center; margin-top: 5%">Войти</h3>
-			<div style="width: 80%; margin:auto">
-				<div class="uk-flex-column inputs">
-					<h5>Почта</h5>
-					<input type="text" name="email" class="uk-input"  placeholder="email@mail.com">
-				</div>
-				<div class="uk-flex-column inputs">
-					<h5>Пароль</h5>
-<input type="password" name="password" placeholder="Password..." class="uk-input" >
-				</div>
-			</div>
-			<button style="width: 60%; margin-left: 20%; margin-bottom: 20%; margin-top: 5%" class="uk-button uk-button-secondary" type="submit" name="btnform2" >Войти</button>
+					<h3 style="text-align: center; margin-top: 5%">Регистрация</h3>
+					<div class="inputs" style="width: 80%; margin: 0 auto">
+						<div class="uk-flex uk-flex-center uk-text-center">
+							<div class="uk-width-1-2" style="margin: 0 1%">
+								<label>Почта</label>
+								{{form.email}}
+							</div>
+
+							<div class="uk-width-1-2" style="margin: 0 1%">
+								<label>Имя</label>
+								{{form.first_name}}
+							</div>
+						</div>
+						<br>
+						<div class="uk-flex uk-flex-center uk-text-center">
+							<div class="uk-width-1-2" style="margin: 0 1%">
+								<label>Пароль</label>
+							{{form.password1}}
+							</div>
+							<div class="uk-width-1-2" style="margin: 0 1%">
+								<label>Повторите пароль</label>
+								{{form.password2}}
+							</div>
+						</div>
+					</div>
+					
+					<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" type="submit" name="btnform1">Зарегестрироваться</button>
+					{% csrf_token %}
+				</form>
+			<form method="POST" action="." id="signin-form" class="uk-text-center">
+				{% csrf_token %}
+					<h3 style="text-align: center; margin-top: 5%">Войти</h3>
+					<div style="width: 80%; margin:auto">
+						<div class="uk-flex-column inputs uk-margin-medium-bottom">
+							<label>Почта</label>
+							<input type="text" name="email" class="uk-input uk-border uk-border-rounded" placeholder="email@mail.com">
+						</div>
+						<div class="uk-flex-column inputs">
+							<label>Пароль</label>
+							<input type="password" name="password" placeholder="Password..." class="uk-input uk-border uk-border-rounded">
+						</div>
+					</div>
+					<br>
+					<button class="uk-button uk-button-secondary uk-width-1-2 uk-margin" type="submit" name="btnform2">Войти</button>
+
+			</form>
+
 		</div>
-
-		</form>
-
-</div>
 	</div>
-</div>
-<!--</div> &lt;!&ndash; /form &ndash;&gt;-->
-
-<!--	<div class="container mt-5">-->
-<!--		<div class="row d-flex justify-content-center align-items-center">-->
-<!--			<div class="col-md-8">-->
-<!--				<form method="post" id="regForm" action="{% url 'login' %}">-->
-<!--					<h1 style="font-size:30px" id="redistration">Добро пожаловть в</h1>-->
-<!--					<h1>BeFreela</h1>-->
-<!--					<div class="all-steps" id="all-steps">-->
-<!--						<a href="">-->
-<!--							<span class="step">-->
-<!--								<i class="fa fa-user"></i>-->
-<!--							</span>-->
-<!--						</a>-->
-<!--					</div>-->
-
-<!--					<div class="tab">-->
-<!--						<p>-->
-<!--							<br>-->
-<!--							{{ form.username.label_tag }}-->
-<!--							{{ form.username }}-->
-<!--							<br>-->
-<!--							<br>-->
-<!--							{{ form.password.label_tag }}-->
-<!--							{{ form.password }}-->
-<!--						</p>-->
-<!--						{% if form.errors %}-->
-<!--						<div class="alert alert-danger" id="loginError" role="alert">-->
-<!--							Ошибка в пароле или логин. Поробуйте еще раз.  -->
-<!--						</div>					-->
-<!--						{% endif %}-->
-<!--					-->
-<!--						{% if next %}-->
-<!--						{% if user.is_authenticated %}-->
-<!--						<div class="alert alert-warning" id="loginError" role="alert">-->
-<!--							У вашего аккаунта недостаточно прав. Что бы продолжыить, пожалуйста, войдите в акаунт с нужными правами.	  -->
-<!--						</div>-->
-<!--						{% else %}-->
-<!--						<div class="alert alert-warning" id="loginError" role="alert">-->
-<!--							Пожалуйста войдите, что бы увидеть данную страниццу  -->
-<!--						</div>-->
-<!--						{% endif %}-->
-<!--						{% endif %}-->
-<!--						<p style="font-size: small;">Забыли пароль? <a href="/restorePassword">востановите-->
-<!--								его</a></p>-->
-<!--						<h7>Еще нет аккаунта? <a href="/signin">создай его</a></h7>-->
-<!--					</div>-->
-<!--					-->
-<!--					<div style="overflow: auto;" id="nextprevious">-->
-<!--						<div style="float: right;">-->
-<!--							{% csrf_token %}-->
-<!--							<button type="submit" id="nextBtn" value="login">-->
-<!--								<i class="fa fa-angle-double-right"></i>-->
-<!--							</button>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</form>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
-
+	</div>
 
 </body>
-<style>
-	.inputs input {
-		width: 100%;
-		border-radius: 1em;
-		margin-bottom: 10px
 
-	}
-	.inputs h5{
-		margin-bottom: 5px;
-		margin-top: 10px;
-	}
-</style>
 <script type='text/javascript' src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'>
 </script>
 <script>
-	$(document).ready(function() {
-		$("#signup").click(function(){
-			$("#signin-tab").css("display", "none");
-			$("#signup-tab").css("display", "");
+	$(document).ready(function () {
+		$("#signup").click(function () {
+			$("#signin-form").css("display", "none");
+			$("#signup-form").css("display", "");
 		});
 
-		$("#signin").click(function() {
-			$("#signup-tab").css("display", "none");
-			$("#signin-tab").css("display", "");
+		$("#signin").click(function () {
+			$("#signup-form").css("display", "none");
+			$("#signin-form").css("display", "");
 		});
 	});
 </script>
