added mail and password poles to partner registrations

--- a/partner/Part/templates/signin.html
+++ b/partner/Part/templates/signin.html
@@ -83,11 +83,31 @@
             <div>
                 <div class="all-steps" id="all-steps">
                     <a class="step notactove" onclick="surTab(0)"></a>
+                    <a class="step notactove" onclick="surTab(0)"></a>
                     <a class="step notactove" onclick="surTab(1)"></a>
                     <a class="step notactove" onclick="surTab(2)"></a>
                     <a class="step notactove" onclick="surTab(3)"></a>
                 </div>
                 <form id="regForm" class="uk-width-3-5" method="POST">
+
+                    <div class="tab">
+                        <h2 class="uk-text-center">Главная информация</h2>
+                        <h4 class="uk-text-center">Запомните введеные поля, они понадобяться вам для входа в аккаунт</h4>
+                        <br>
+                        <div class="uk-width-1-1 uk-flex uk-flex-between">
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
+                                <label> Почта </label>
+                                <br>
+                                <input class="uk-input" type="text" placeholder="BeFreela@mail.ru">
+                            </div>
+                            <div style="display: inline-block; margin: 0 10px" class="uk-width-1-2">
+                                <label> Название организации </label>
+                                <br>
+                                <input class="uk-input" type="password" placeholder="Введите ваш парлоль">
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="tab">
                         <h2 class="uk-text-center">Название магазина</h2>
                         <h4 class="uk-text-center">Выбери уникальное название магазина, который отражает твой стиль</h4>
